crash course completed

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <main class="main-flexbox-container">
 
     <section class="left-panel">
-      <img class="headshot" src="./images/profile_1500x1000.jpg">
+      <img class="headshot">
     </section>
 
 
@@ -44,7 +44,7 @@
       <!-- engagement button row -->
       <div class="engageButtons">
         <!-- <button type="button" class="btn btn-lg btn-primary me-1">Resume</button> -->
-        <a class="btn btn-lg btn-primary me-1" href="#" role="button">Resume</a>
+        <a class="btn btn-lg btn-primary me-1" href="https://profile.indeed.com/p/raymondd-zhlx129" target="_blank" role="button">Resume</a>
         <button type="button" class="btn btn-lg btn-primary me-1" data-bs-toggle="modal"
           data-bs-target="#servicesModal">Services</button>
         <!-- <button type="button" class="btn btn-lg btn-primary me-1">Demos</button> -->
