switched to grid; better photo; disabled buttons

--- a/src/_sandboxed/flexbox.html
+++ b/src/_sandboxed/flexbox.html
@@ -20,7 +20,7 @@
 <body>
 
   <!-- IMPORTANT NOTE:  main, left-panel, & right-panel wrappers are not controlled by bootstrap's grid system -->
-  <main class="grid-container">
+  <main class="main-flexbox-container">
 
     <section class="left-panel">
       <img class="headshot" src="./images/landing_1500x1000.jpg">
@@ -48,18 +48,16 @@
         <button type="button" class="btn btn-lg btn-primary me-1" data-bs-toggle="modal"
           data-bs-target="#servicesModal">Services</button>
         <!-- <button type="button" class="btn btn-lg btn-primary me-1">Demos</button> -->
-        <a class="btn btn-lg btn-primary me-1 disabled" href="#" role="button">Demos</a>
+        <a class="btn btn-lg btn-primary me-1" href="#" role="button">Demos</a>
       </div>
 
       <!-- social button row -->
       <div class="socialButtons">
-        <!-- <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1"><i
-            class="fa-brands fa-github"></i></button> -->
-        <a class="btn btn-outline-primary btn-circle btn-circle-lg me-1" href="https://github.com/RayDeanTech" target="_blank" role="button"><i
-            class="fa-brands fa-github"></i></a>
-        <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1 disabled"><i
+        <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1"><i
+            class="fa-brands fa-github"></i></button>
+        <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1"><i
             class="fa-brands fa-stack-overflow"></i></button>
-        <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1 disabled"><i
+        <button type="button" class="btn btn-outline-primary btn-circle btn-circle-lg me-1"><i
             class="fa-brands fa-linkedin"></i></button>
       </div>
 
